--- a/style/xs-style.less
+++ b/style/xs-style.less
@@ -1,9 +1,22 @@
 @media (max-width: 766px) { 
 html {
+    body {
+        font-size: 13px;
+    }
+    h1 {
+        font-size:23px;
+    }
+    h2 {
+        font-size: 25px;
+        margin-top: 10px;
+    }
     #topCal {
         height: 60px;
         .menuButton img {
             height: 25px;
+        }
+        .topShadow {
+            top: 2px;
         }
         #caldenderPerson .col-xs-3, #caldenderPerson .col-xs-2{    
                 > span {
@@ -30,6 +43,38 @@ html {
                     color: black;
                 }
             }                  
+        }
+        body #mainCalendar #botCal table tr {
+            height: 25px;
+            padding-top: 2.5px;
+        }
+        body #mainCalendar #botCal table th, body #mainCalendar #botCal table td {
+            padding: 0px;
+            padding-top: 2.5px;
+        }
+        body #mainCalendar #botCal .timeList {
+            padding: 0px;
+            margin-top: 15px;
+            td {
+                padding: 0px;
+                padding-top: 3px;
+            }
+        }
+        #logoMain {
+            padding: 0px;
+            padding-left: 5px;
+        }
+        #topCal #caldenderPerson img {
+            max-height: 25px;
+            margin-top: 16px;
+        }
+        body #wrapper #loginScreen {
+            margin-top: 50px;
+        }
+        #caldenderPerson.pageHeader {
+            .row #logoMain img{
+                max-height: 25px;
+            }
         }
     }
 }
